Prefer Makefiles on POSIX platforms

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "cmake-js compile"
+    "install": "cmake-js compile -m"
   },
   "repository": {
     "type": "git",
