--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "cmake-js compile"
+    "install": "cmake-js compile -m"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/mhsjlw/node-leveldb-mcpe#readme",
   "dependencies": {
+    "abstract-leveldown": "^3.0.0",
     "bindings": "^1.3.0",
     "cmake-js": "^3.6.1",
     "nan": "^2.8.0"
