--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript bindings for Mojang's fork of LevelDB",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "install": "cmake-js compile -m"
   },
   "repository": {
@@ -23,5 +23,9 @@
     "bindings": "^1.3.0",
     "cmake-js": "^3.6.1",
     "nan": "^2.8.0"
+  },
+  "devDependencies": {
+    "jest": "^22.1.4",
+    "levelup": "^2.0.1"
   }
 }
