--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:carbon # 8.9.4
+      - image: node:carbon
     working_directory: ~/repo
     steps:
       - checkout
@@ -10,7 +10,8 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           - v1-dependencies-
-      - run: npm install
+      - run: apt-get update && apt-get install -y cmake
+      - run: npm install --unsafe-perm
       - save_cache:
           paths:
             - node_modules
