--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "2.0.0",
   "description": "JavaScript bindings for Mojang's fork of LevelDB",
   "main": "index.js",
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": "^7.0.0"
+  },
   "scripts": {
     "test": "jest",
     "install": "cmake-js compile -m"
@@ -19,13 +23,13 @@
   },
   "homepage": "https://github.com/mhsjlw/node-leveldb-mcpe#readme",
   "dependencies": {
-    "abstract-leveldown": "^3.0.0",
-    "bindings": "^1.3.0",
-    "cmake-js": "^5.1.0",
-    "nan": "^2.8.0"
+    "abstract-leveldown": "3.0.0",
+    "bindings": "1.3.0",
+    "cmake-js": "6.1.0",
+    "nan": "2.8.0"
   },
   "devDependencies": {
-    "jest": "^24.5.0",
-    "levelup": "^2.0.1"
+    "jest": "24.5.0",
+    "levelup": "2.0.1"
   }
 }
