--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,6 @@ jobs:
               with:
                   node-version: 14
             - run: npm install -g npm@latest
-            - run: apt-get update && apt-get install -y cmake
+            - run: sudo apt-get update && sudo apt-get install -y cmake
             - run: npm install --unsafe-perm
             - run: npm test
