--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "leveldb-mcpe",
-  "version": "2.0.0",
-  "description": "JavaScript bindings for Mojang's fork of LevelDB",
-  "main": "index.js",
-  "engines": {
-    "node": ">=14.0.0",
-    "npm": "^7.0.0"
-  },
-  "scripts": {
-    "test": "jest",
-    "install": "cmake-js compile -m"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mhsjlw/node-leveldb-mcpe.git"
-  },
-  "author": "mhsjlw",
-  "license": "MIT",
-  "gypfile": true,
-  "bugs": {
-    "url": "https://github.com/mhsjlw/node-leveldb-mcpe/issues"
-  },
-  "homepage": "https://github.com/mhsjlw/node-leveldb-mcpe#readme",
-  "dependencies": {
-    "abstract-leveldown": "3.0.0",
-    "bindings": "1.3.0",
-    "cmake-js": "6.1.0",
-    "nan": "2.8.0"
-  },
-  "devDependencies": {
-    "bluebird": "^3.7.2",
-    "jest": "24.5.0",
-    "levelup": "2.0.1"
-  }
+    "name": "leveldb-mcpe",
+    "version": "2.0.0",
+    "description": "JavaScript bindings for Mojang's fork of LevelDB",
+    "main": "index.js",
+    "engines": {
+        "node": ">=14.0.0",
+        "npm": "^7.0.0"
+    },
+    "scripts": {
+        "test": "jest",
+        "install": "cmake-js compile --prefer-make"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mhsjlw/node-leveldb-mcpe.git"
+    },
+    "author": "mhsjlw",
+    "license": "MIT",
+    "gypfile": true,
+    "bugs": {
+        "url": "https://github.com/mhsjlw/node-leveldb-mcpe/issues"
+    },
+    "homepage": "https://github.com/mhsjlw/node-leveldb-mcpe#readme",
+    "dependencies": {
+        "abstract-leveldown": "7.0.0",
+        "bindings": "1.5.0",
+        "cmake-js": "github:japj/cmake-js#fix-mac-build",
+        "nan": "2.14.2"
+    },
+    "devDependencies": {
+        "bluebird": "^3.7.2",
+        "jest": "24.5.0",
+        "levelup": "5.0.0"
+    }
 }
